--- a/client/src/components/FormDolist/style.css
+++ b/client/src/components/FormDolist/style.css
@@ -1,11 +1,26 @@
 .form-dolist {
-    width: 700px;
-    height : 500px;
-    margin-bottom: 30px;
-    background-color:rgb(223, 223, 168);
+    width: 350px;
+    height : 400px;
+    margin-top: 30px;
+    background-color:#fdaf88;
 
 }
 
 .input-dolist {
-    margin-bottom: 20px;
+    margin: 0 0 30px 30px;
+    width: 300px;
+}
+
+.toDolist-btn {
+    margin-left: 15px;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.Dolist-label {
+    margin: 10px 0 0 15px;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 700;
 }
