making date for todo form with datepicker

--- a/client/src/sass/abstracts/_variables.scss
+++ b/client/src/sass/abstracts/_variables.scss
@@ -1,14 +1,10 @@
-$color-cream-light-0: #efe9cc;
-$color-cream-light-1: #f0dd92;
-$color-cream-light : #f5de83;
-$color-peach-light : #ffd6a0;
-$color-peach-root: #f6cd90;
-$color-peach-medium: #fdaf88;
-$color-cream-dark-0: #deb881;
-$color-cream-dark-1: #d6a45d;
-$color-beige-dark-0: #f0dd92;
-$color-beige-dark-0: #ded473;
-$color-peach-dark-0: #ffa06f;
+$color-pink-light-0: #fff1c5;
+$color-pink-light-0: #e6b1b1;
+$color-purple-light : #c38b8b;
+$color-purple-medium: #b0757c;
+$color-purple-dark-0: #9b5d73;
+$color-purple-dark-1: #72354b;
+
 
 
 
