--- a/client/src/sass/layout/_navigation.scss
+++ b/client/src/sass/layout/_navigation.scss
@@ -26,7 +26,7 @@
     position: fixed;
     top: 6.5rem;
     right: 6.5rem;
-    background-image: radial-gradient($color-peach-light, $color-peach-dark-0);
+    background-image: radial-gradient($color-pink-light-0, $color-purple-dark-0);
     z-index: 1000;
     transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
    
@@ -74,7 +74,7 @@
         &:active  {
             
             background-position: 100%;
-            color: $color-pink-dark;
+            color: $color-purple-dark-1;
             transform: translateX(1rem);
         }
 
