--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -1,26 +1,27 @@
 //import all the files here 
 
 //abstracts
-@import"abstracts/functions";
-@import"abstracts/mixins";
-@import"abstracts/variables";
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
 //base
-@import"base/animation";
-@import"base/base";
-@import"base/typography";
-@import"base/utilities";
+@import "base/animation";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
 
 //components
-@import"components/botton";
-@import"components/card";
+@import "components/button";
+@import "components/formDolist.scss";
+@import "components/card";
 
 
 //layout
-@import"layout/grid";
-@import"layout/header";
-@import"layout/navigation";
-@import"layout/footer";
+@import "layout/grid";
+@import "layout/header";
+@import "layout/navigation";
+@import "layout/footer";
 
 //pages 
-@import"pages/home";
+@import "pages/home";
