adding bass.scss, adding formExpenses add image to form expenses

--- a/client/src/sass/abstracts/_variables.scss
+++ b/client/src/sass/abstracts/_variables.scss
@@ -13,6 +13,7 @@ $color-black: #000;
 $color-grey-dark : #777;
 $color-grey-dark-2:#333;
 $color-grey-dark-3:rgb(94, 94, 94);
+$color-alert: rgb(161, 10, 30);
 
 
 $color-grey-light-1: #f7f7f7;
