--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -14,6 +14,7 @@
 //components
 @import "components/button";
 @import "components/formDolist.scss";
+@import "components/formExpenses.scss";
 @import "components/card";
 
 
