adding btn scss, animation scss and typography scss into applicaton

--- a/client/src/sass/abstracts/_variables.scss
+++ b/client/src/sass/abstracts/_variables.scss
@@ -4,6 +4,7 @@ $color-purple-light : #c38b8b;
 $color-purple-medium: #b0757c;
 $color-purple-dark-0: #9b5d73;
 $color-purple-dark-1: #72354b;
+$color-purple-dark-2: #5f283c;
 
 
 
