--- a/client/src/sass/components/_formExpenses.scss
+++ b/client/src/sass/components/_formExpenses.scss
@@ -51,3 +51,27 @@
            }
 
 }
+
+.input-expenses {
+    font-size: inherit;
+    font-weight: 700;
+    padding:1.5rem 2rem;
+    border-radius: 3px;
+    background-color: $color-white;
+    border-bottom: 3px solid transparent;
+    width: 250px;
+    display: block;
+}
+
+.expenses-label {
+    font-size: inherit;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    background-image:linear-gradient(to right bottom, $color-purple-dark-2, $color-purple-dark-0);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    margin-bottom: 2rem;
+    letter-spacing: .2rem;
+}
