adding wedding model to db

--- a/client/src/sass/pages/_home.scss
+++ b/client/src/sass/pages/_home.scss
@@ -1,8 +1,7 @@
 .section-budget {
     padding: 10rem;
     background-image: linear-gradient(to right bottom, $color-pink-light-0, $color-purple-dark-0);
-
-    
+    min-height: 100vh;
 }
 
 .budget {
