make todolist inputs editable in each li, making scss file for todolist form and style into that, make update routes link to the front end for todolist

--- a/client/src/sass/abstracts/_variables.scss
+++ b/client/src/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 $color-pink-light-0: #fff1c5;
 $color-pink-light-0: #e6b1b1;
 $color-purple-light : #c38b8b;
-$color-purple-medium: #b0757c;
+$color-purple-medium: #ad757b;
 $color-purple-dark-0: #9b5d73;
 $color-purple-dark-1: #72354b;
 $color-purple-dark-2: #5f283c;
