--- a/client/src/sass/components/_formDolist.scss
+++ b/client/src/sass/components/_formDolist.scss
@@ -1,26 +1,38 @@
-.form-dolist {
-    width: 350px;
-    height : 400px;
-    margin-top: 30px;
-    background-color: $color-purple-dark-0;
 
+.form-toDoList {
+    &__group:not(:last-child) {
+        margin-bottom: 2rem;
+
+    }
+    &__input{
+    font-size: inherit;
+    margin-top: 0;
+    padding:1.5rem 2rem;
+    border-radius: 2px;
+    background-color: rgba($color-purple-light, .5);
+    border: none;
+    border-bottom: 3px solid transparent;
+    width: 100%;
+    display: block;
+    transition: all .3s;
+
+    &:focus {
+        outline: none;
+        box-shadow: 1rem 2rem rgba($color-white , .2);
+        border-bottom: 3px solid $color-pink-light-0;
+    }
+
+    &:focus:invalid {
+        border-bottom: 3px solid $color-alert;
+    }
+
+    &::-webkit-input-placeholder {
+        color:$color-grey-dark-3;
+    }
+
+    &__icon {
+        color: $color-grey-light-1;
+    }
+    
 }
-
-// .input-dolist {
-//     margin: 0 0 30px 30px;
-//     width: 300px;
-// }
-
-// .toDolist-btn {
-//     margin-left: 15px;
-//     font-size: 15px;
-//     text-transform: uppercase;
-//     font-weight: 700;
-// }
-
-// .Dolist-label {
-//     margin: 10px 0 0 15px;
-//     font-size: 15px;
-//     text-transform: uppercase;
-//     font-weight: 700;
-// }
+}
