--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -1,7 +1,7 @@
 //import all the files here 
 
 //abstracts
-@import "abstracts/functions";
+// @import "abstracts/functions";
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
@@ -9,21 +9,21 @@
 @import "base/animation";
 @import "base/base";
 @import "base/typography";
-@import "base/utilities";
+// @import "base/utilities";
 
 //components
 @import "components/button";
 @import "components/formDolist.scss";
 @import "components/todolistResult";
 @import "components/formExpenses.scss";
-@import "components/card";
+// @import "components/card";
 
 
 //layout
 @import "layout/grid";
 @import "layout/header";
 @import "layout/navigation";
-@import "layout/footer";
+// @import "layout/footer";
 
 //pages 
 @import "pages/home";
