adding style to register from, changing mongoose.connect to make it work on heroku

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -13,6 +13,7 @@
 
 //components
 @import "components/button";
+@import "components/formSignUp";
 @import "components/formDolist.scss";
 @import "components/todolistResult";
 @import "components/formExpenses.scss";
