--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -24,6 +24,7 @@
 @import "layout/grid";
 @import "layout/header";
 @import "layout/navigation";
+@import "layout/footer";
 // @import "layout/footer";
 
 //pages 
