making fav icone for app, creating header and sass file for header, working on routes and wedding models and removing some images

--- a/client/src/sass/components/_button.scss
+++ b/client/src/sass/components/_button.scss
@@ -62,6 +62,7 @@
         }
 
         }
+        
 
         &--toDoList-icon {
 
@@ -73,6 +74,18 @@
             background-color: $color-white;
         }
         
+        }
+
+        &--header {
+            background-color: transparent;
+         
+            color: $color-white;
+    
+        &::after {
+            background-color: transparent;
+      
+        }
+
         }
 
         &::after {
