--- a/client/src/sass/base/_animation.scss
+++ b/client/src/sass/base/_animation.scss
@@ -26,6 +26,20 @@
         transform: translate(0);
        }
       }
+
+      @keyframes moveInDown {
+        0%{
+         opacity: 0;
+         transform: translateY(-100px);
+        }
+        80%{
+           transform: translateY(10px);
+        }
+        100%{
+         opacity: 1;
+         transform: translate(0);
+        }
+       }
    
       @keyframes moveInBotton {
    
