--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -25,6 +25,7 @@
 @import "layout/header";
 @import "layout/navigation";
 @import "layout/footer";
+@import "layout/carousel";
 // @import "layout/footer";
 
 //pages 
