--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -22,6 +22,7 @@
 
 //layout
 @import "layout/grid";
+@import "layout/about";
 @import "layout/header";
 @import "layout/navigation";
 @import "layout/footer";
