--- a/client/src/sass/pages/_home.scss
+++ b/client/src/sass/pages/_home.scss
@@ -50,13 +50,12 @@
     padding: 10rem;
     background-color: $color-grey-light-1;
     min-height: 100vh;
+    position: relative;
 }
 
 .section-signup {
 
     background-image: url(../../assets/signup.jpg);
-    // background-repeat: no-repeat;
     background-size: cover;
-    // background-attachment: fixed;
     min-height: 100vh;
 }
