--- a/client/src/sass/components/_formSurvey.scss
+++ b/client/src/sass/components/_formSurvey.scss
@@ -1,19 +1,18 @@
 
 .form-survey {
-    
-    &__group:not(:last-child) {
+    &__group :not(:last-child) {
         margin-bottom: 2rem;
 
     }
     &__input{
     font-size: inherit;
     margin-top: 0;
-    padding:1.5rem 2rem;
+    padding: 1.5rem 2rem;
     border-radius: 2px;
-    background-color: rgba($color-purple-light, .5);
+    background-color: rgba($color-pink-light-0, .5);
     border: none;
     border-bottom: 3px solid transparent;
-    width: 100%;
+    width: 90%;
     display: block;
     transition: all .3s;
 
@@ -36,4 +35,20 @@
     }
     
 }
+
+    &__label{
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin-left: 2rem;
+    margin-top: .7rem;
+    display: block;
+    transition: all .3s;
+    }
+
+    &__input:placeholder-shown + &__label {
+        opacity: 0;
+        visibility: hidden;
+       transform: translateY(-4rem);
+           }
+
 }
