adding style into survey, addig googlefont, adding card folder into expenses but is not functional yet

--- a/client/src/sass/base/_base.scss
+++ b/client/src/sass/base/_base.scss
@@ -7,8 +7,13 @@
 html{
     //define what 1rem is 
     font-size: 62.5%;
+    font-family: 'Courgette', cursive;
+
 }
 
 body {
     box-sizing:border-box;
+    font-family: 'Courgette', cursive;
+    font-family: 'Libre Baskerville', serif;
+
 }
