--- a/client/src/sass/pages/_home.scss
+++ b/client/src/sass/pages/_home.scss
@@ -25,7 +25,7 @@
 }
 .section-budget {
     padding: 10rem;
-    background-image: linear-gradient(to right bottom, $color-pink-light-0, $color-purple-dark-0);
+    background-image: linear-gradient(to right bottom, $color-white, $color-pink-light-0);
     min-height: 100vh;
 }
 .budget {
@@ -36,13 +36,13 @@
     background-size: cover;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .20);
-    height: 55rem;
-    width: 100%;
+    height: 60rem;
+    width: 90%;
     margin-top: 2rem;
     animation: moveInRight 1s ease-out;
     &__form {
         width: 50%;
-        height: 30%;
+        height: 40%;
         padding: 3rem;
     }
 }
