--- a/client/src/sass/base/_base.scss
+++ b/client/src/sass/base/_base.scss
@@ -8,7 +8,7 @@ html{
     //define what 1rem is 
     font-size: 62.5%;
     font-family: 'Courgette', cursive;
-
+    font-family: 'Libre Baskerville', serif;
 }
 
 body {
